--- a/_posts/fos/2012-01-25-Shy-Kid.md
+++ b/_posts/fos/2012-01-25-Shy-Kid.md
@@ -6,6 +6,7 @@ author: Vipin Madhavanunni
 tags:
 - Kid
 - Fraction of Second
+add_to_popular_list: true
 thumbnail_path: "blog/Fraction-of-Second/Shy_Kid.jpg"
 ---
 
