UPdating poeam and video post

--- a/_posts/poems/2006-10-23-symbol.md
+++ b/_posts/poems/2006-10-23-symbol.md
@@ -1,5 +1,5 @@
 ---
-layout: post
+layout: poem
 title: A Symbol ...
 date: '2006-10-23T14:48:00.000+05:30'
 author: Vipin Madhavanunni
@@ -12,9 +12,7 @@ blogger_id: tag:blogger.com,1999:blog-6224281097541434274.post-91443271480423744
 blogger_orig_url: http://poems.pattu.thekkedam.com/2006/10/symbol_23.html
 thumbnail_path: "blog/A-Symbol/Fingerprint-Heart.jpg"
 ---
-{% include image.html path=page.thumbnail_path alt="A Symbol ..." %}
 <pre>
-
 A long silence, 
 Few drops of tears, 
 Collection of words, 
@@ -29,10 +27,9 @@ I never found.
 
 I didn't know my name mean everything, 
 As a symbol.
-
 </pre>
 
 <pre>
-Remembrance of my life ,
+Remembrance of my life,
 11:47:07 PM 06-10-2006
 </pre>
