--- a/_posts/poems/2008-01-10-i-love-you.md
+++ b/_posts/poems/2008-01-10-i-love-you.md
@@ -1,5 +1,5 @@
 ---
-layout: post
+layout: poem
 title: I Love you
 date: '2008-01-10T23:27:00.003+05:30'
 author: Vipin Madhavanunni
@@ -12,9 +12,7 @@ blogger_id: tag:blogger.com,1999:blog-6224281097541434274.post-18474382059728095
 blogger_orig_url: http://poems.pattu.thekkedam.com/2008/01/i-love-you.html
 thumbnail_path: "blog/I-Love-you/black.png"
 ---
-{% include image.html path=page.thumbnail_path alt="I Love you" %}
 <pre>
-
 My promises, will I be able to keep. 
 Take my life to be true to you. 
 
@@ -29,7 +27,6 @@ So this love in all my birth.
 That's why, I love you. 
 To get another birth, 
 to love you again. 
-
 </pre>
 
 <pre>
