--- a/_posts/poems/2008-06-12-blog-post.md
+++ b/_posts/poems/2008-06-12-blog-post.md
@@ -1,5 +1,5 @@
 ---
-layout: post
+layout: poem
 title: സൊപ്നലൊക യത്ര ...
 date: '2008-06-12T01:05:00.012+05:30'
 author: Vipin Madhavanunni
@@ -11,9 +11,7 @@ blogger_id: tag:blogger.com,1999:blog-6224281097541434274.post-19476596753006720
 blogger_orig_url: http://poems.pattu.thekkedam.com/2008/06/blog-post.html
 thumbnail_path: "blog/Dreams-of-love/balloon.jpg"
 ---
-{% include image.html path=page.thumbnail_path alt="സൊപ്നലൊക യത്ര ..." %}
 <pre>
-
 ഈ യാത്ര കിനാവിനോടൊപ്പമുള്ള യാത്ര, 
 അവളുടെ ഒപ്പമുള്ളീ സ്വപ്നലോകയാത്ര, 
 പുതിയ നിമിഷത്തിലേക്കുള്ള യാത്ര. 
@@ -23,5 +21,4 @@ thumbnail_path: "blog/Dreams-of-love/balloon.jpg"
 ഞങ്ങളുടെ പ്രണയത്തിന്‍ കഥകള്‍ 
 അനന്തമായ സന്തോഷത്തിന്‍ നാളുകള്‍. 
 വരുവാന്‍ വയ്യ ഈ ലോകത്തില്‍ നിന്നും.
-
 </pre>
